--- a/ImmiCanada/Views/Home/Index.cshtml
+++ b/ImmiCanada/Views/Home/Index.cshtml
@@ -194,7 +194,7 @@
             }
         </div>
         <div class="full-width pad-top20px text-center">
-            @Html.ActionLink("XEM TẤT CẢ", "Index", "Service", null, new { @class="btn-view-all-services"})
+            @Html.ActionLink("XEM TẤT CẢ", "Index", "Service", null, new { @class = "btn-view-all-services" })
         </div>
     </div>
 </div>
@@ -284,60 +284,7 @@
         </div>
     </div>
 </div>
-<div class="row section-interested" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-    <div class="col-sm-12 row">
-        <div class="col-sm-6 ">
-            <div class="col-sm-12 row main-interested-section">
-                <div class="col-sm-2">
-                    <div class="interested-main-surground"><i class="fa fa-pencil-square-o interested-main-icon" aria-hidden="true"></i></div>
-                </div>
-                <div class="col-sm-10 mar-top25px pad-left35px">
-                    <h4>Ứng viên quan tâm</h4>
-                    <div class="interested-text">Tìm hiểu xem bạn đủ điều kiện đến Canada hay không bằng cách điền vào biểu mẫu đánh giá miễn phí của chúng tôi. Chúng tôi sẽ cung cấp cho bạn bảng đánh giá của chúng tôi trong vòng 1-2 ngày làm việc.</div>
-                    <button type="button" class="btn btn-danger mar-top25px btn-interested">Phiếu đánh giá miễn phí</button>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-6 ">
-            <div class="col-sm-12 row main-interested-section">
-                <div class="col-sm-2">
-                    <div class="interested-main-surground"><i class="fa fa-pencil-square-o interested-main-icon" aria-hidden="true"></i></div>
-                </div>
-                <div class="col-sm-10 mar-top25px pad-left35px">
-                    <h4>Nhà tuyển dụng quan tâm</h4>
-                    <div class="interested-text">Vui lòng liên hệ với chúng tôi để nhận thêm thông tin.</div>
-                    <button type="button" class="btn btn-danger mar-top25px btn-interested">Liên hệ chúng tôi</button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-sm-12 row mar-top25px">
-        <div class="col-sm-6 ">
-            <div class="col-sm-12 row main-interested-section">
-                <div class="col-sm-2">
-                    <div class="interested-main-surground"><i class="fa fa-pencil-square-o interested-main-icon" aria-hidden="true"></i></div>
-                </div>
-                <div class="col-sm-10 mar-top25px pad-left35px">
-                    <h4>Đại lý quan tâm</h4>
-                    <div class="interested-text">Chúng tôi hoan nghênh các liên kết với các đại lý đủ điều kiện. Theo liên kết dưới đây để tìm hiểu thêm</div>
-                    <button type="button" class="btn btn-danger mar-top25px btn-interested">Liên hệ chúng tôi</button>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-6 ">
-            <div class="col-sm-12 row main-interested-section">
-                <div class="col-sm-2">
-                    <div class="interested-main-surground"><i class="fa fa-pencil-square-o interested-main-icon" aria-hidden="true"></i></div>
-                </div>
-                <div class="col-sm-10 mar-top25px pad-left35px">
-                    <h4>Tin tức</h4>
-                    <div class="interested-text">Đọc thêm tin tức về nhập cư Canada.</div>
-                    <button type="button" class="btn btn-danger mar-top25px btn-interested">Tin mới nhất</button>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+@{Html.RenderAction("InterestedSection", "Home");}
 @*<hr class="news-line-top" />*@
 <div class="row section-news pad-top40px" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
     @*Link for Carousel multiple items : https://azmind.com/bootstrap-carousel-multiple-items/*@
