--- a/ImmiCanada/Views/Service/Index.cshtml
+++ b/ImmiCanada/Views/Service/Index.cshtml
@@ -92,7 +92,7 @@
                                 </div>
                             </div>
                             <div class="row outstanding-form-footer">
-                                <input type="button" id="btnJoinUrban" value="THAM GIA" class="btn-join" />
+                                <input type="button" id="btnJoinUrban" value="THAM GIA" class="btn-join" onclick="javascript: window.location.href='/Service/Detail/@outstandingservice.Id'" />
                             </div>
                         </div>
                     </div>
@@ -104,7 +104,7 @@
         {
             <div class="row pad-top85px canada-deserve-to-life">
                 <div class="row col-sm-12 canada-deserve-to-life-title">
-                    <img src="~/Content/images/left-bg.jpg" class="img-left-icon" /><p class="immigration-service-type-title">Chương Trình Tỉnh Bang</p> &nbsp; <p>@serviceByType.ImmigrationServiceType</p>
+                    <img src="~/Content/images/left-bg.jpg" class="img-left-icon" /><p class="immigration-service-type-title">Chương Trình Tỉnh Bang</p> &nbsp; <p>@serviceByType.ImmigrationServiceState</p>
                 </div>
             </div>
             <div class="row col-sm-10 offset-1">
@@ -162,59 +162,6 @@
 
     </div>
 </div>
-<div class="container-fluid pad-top40px">
-    <div class="row section-interested  mar-bottom60px" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-        <div class="col-sm-12 row">
-            <div class="col-sm-6 ">
-                <div class="col-sm-12 row main-interested-section">
-                    <div class="col-sm-2">
-                        <div class="interested-main-surground"><i class="fa fa-pencil-square-o interested-main-icon" aria-hidden="true"></i></div>
-                    </div>
-                    <div class="col-sm-10 mar-top25px pad-left35px">
-                        <h4>Ứng viên quan tâm</h4>
-                        <div class="interested-text">Tìm hiểu xem bạn đủ điều kiện đến Canada hay không bằng cách điền vào biểu mẫu đánh giá miễn phí của chúng tôi. Chúng tôi sẽ cung cấp cho bạn bảng đánh giá của chúng tôi trong vòng 1-2 ngày làm việc.</div>
-                        <button type="button" class="btn btn-danger mar-top25px btn-interested">Phiếu đánh giá miễn phí</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6 ">
-                <div class="col-sm-12 row main-interested-section">
-                    <div class="col-sm-2">
-                        <div class="interested-main-surground"><i class="fa fa-pencil-square-o interested-main-icon" aria-hidden="true"></i></div>
-                    </div>
-                    <div class="col-sm-10 mar-top25px pad-left35px">
-                        <h4>Nhà tuyển dụng quan tâm</h4>
-                        <div class="interested-text">Vui lòng liên hệ với chúng tôi để nhận thêm thông tin.</div>
-                        <button type="button" class="btn btn-danger mar-top25px btn-interested">Liên hệ chúng tôi</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-12 row mar-top25px">
-            <div class="col-sm-6 ">
-                <div class="col-sm-12 row main-interested-section">
-                    <div class="col-sm-2">
-                        <div class="interested-main-surground"><i class="fa fa-pencil-square-o interested-main-icon" aria-hidden="true"></i></div>
-                    </div>
-                    <div class="col-sm-10 mar-top25px pad-left35px">
-                        <h4>Đại lý quan tâm</h4>
-                        <div class="interested-text">Chúng tôi hoan nghênh các liên kết với các đại lý đủ điều kiện. Theo liên kết dưới đây để tìm hiểu thêm</div>
-                        <button type="button" class="btn btn-danger mar-top25px btn-interested">Liên hệ chúng tôi</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6 ">
-                <div class="col-sm-12 row main-interested-section">
-                    <div class="col-sm-2">
-                        <div class="interested-main-surground"><i class="fa fa-pencil-square-o interested-main-icon" aria-hidden="true"></i></div>
-                    </div>
-                    <div class="col-sm-10 mar-top25px pad-left35px">
-                        <h4>Tin tức</h4>
-                        <div class="interested-text">Đọc thêm tin tức về nhập cư Canada.</div>
-                        <button type="button" class="btn btn-danger mar-top25px btn-interested">Tin mới nhất</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+<div class="container-fluid pad-top40px mar-bottom60px">
+    @{Html.RenderAction("InterestedSection", "Home");}
 </div>
